--- a/src/pages/WordsPage.module.css
+++ b/src/pages/WordsPage.module.css
@@ -24,19 +24,23 @@
 }
 
 .name {
-  font-size: 2rem;
+  font-size: 1.6rem;
   color: #333;
   margin-right: 0.3rem;
 }
 
 .piyin {
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #999;
   margin-left: 0.3rem;
+}
+
+.speechIcon {
+  font-size: 0.9rem;
 }
 
 .description {
   margin-top: 0.3rem;
   font-size: 0.8rem;
-  color: #444;
+  color: #666666;
 }
